--- a/viz.yaml
+++ b/viz.yaml
@@ -300,15 +300,17 @@ publish:
     id: static_story_figure
     location: "images/WU_stories_static.png"
     mimetype: image/png
+    export: true
     title: "water use in the U.S."
     alttext: "water use in the U.S."
     relpath: "images/WU_stories_static.png"
   -
     id: key_stories
     template: layout/templates/key_stories.mustache
-    depends: ["rank_states_utils", "national_pie", "wu_data_15_sum_json", "styles"]
+    depends: ["rank_states_utils", "national_pie", "wu_data_15_sum_json", "styles", "static_story_figure"]
     context:
       sections: ["rank_states_utils", "national_pie"]
+      figure: "static_story_figure"
     publisher: section
   -
     id: footer_section
