--- a/viz.yaml
+++ b/viz.yaml
@@ -354,7 +354,6 @@ publish:
       map_circles: map_circles
       map_states: map_states
       map_counties: map_counties
-      static_story_figure: static_story_figure
       map: build_map
       directions_text: directions_text
       state_boundaries_USA: state_boundaries_USA_topojson
@@ -366,7 +365,7 @@ publish:
     context:
       resources: ["lib_d3_js", "topojson", 
                   "map_css", "custom_css", "hashes", "projection", "styles", "map_utils", "map_states",
-                  "map_counties", "watermark_utils", "map_circles", "static_story_figure"]
+                  "map_counties", "watermark_utils", "map_circles"]
       embed: ["map","directions_text"]
   -
     id: directions_text
