--- a/viz.yaml
+++ b/viz.yaml
@@ -216,6 +216,7 @@ publish:
       projection: "custom_projection"
       styles: "styles"
       buttons: buttons
+      resize: resize
       map_utils: "map_utils"
       watermark_utils: "watermark_utils"
       map_circles: map_circles
@@ -230,8 +231,8 @@ publish:
       wu_data_15_range:  "wu_data_15_range_json"
     context:
       resources: ["lib_d3_js", "topojson", "header_css", "content_css", "footer_css", "socialCSS","vizlab-favicon",
-                  "map_css", "custom_css", "hashes", "projection", "styles", "buttons", "map_utils", "map_states", "map_counties",
-                  "watermark_utils", "map_circles"]
+                  "map_css", "custom_css", "hashes", "projection", "styles", "buttons", "resize", "map_utils",
+                  "map_states", "map_counties", "watermark_utils", "map_circles"]
       sections: ["social", "mobile_map_ui", "map", "directions_text", "key_stories"] # adding header and footer here, doubled each on the page
   -
     id: topojson
@@ -265,6 +266,10 @@ publish:
   -
     id: national_pie
     location: "js/national_pie.js"
+    mimetype: application/javascript
+  -
+    id: resize
+    location: "js/resize.js"
     mimetype: application/javascript
   -
     id: buttons
@@ -370,6 +375,7 @@ publish:
       projection: custom_projection
       styles: styles
       buttons: buttons
+      resize: resize
       map_utils: map_utils
       watermark_utils: watermark_utils
       map_circles: map_circles
@@ -385,8 +391,8 @@ publish:
       wu_data_15_range:  wu_data_15_range_json
     context:
       resources: ["lib_d3_js", "topojson", 
-                  "map_css", "custom_css", "hashes", "projection", "styles", "buttons", "map_utils", "map_states",
-                  "map_counties", "watermark_utils", "map_circles"]
+                  "map_css", "custom_css", "hashes", "projection", "styles", "buttons", "resize", "map_utils",
+                  "map_states", "map_counties", "watermark_utils", "map_circles"]
       embed: ["map","directions_text"]
   -
     id: directions_text
