--- a/viz.yaml
+++ b/viz.yaml
@@ -220,7 +220,7 @@ publish:
       directions_text: "directions_text"
       header: "header_section"
       mobile_map_ui: "mobile_map_ui"
-      key_stories: "key_stories"
+      wu-story: "wu-story"
       footer: "footer_section"
       hashes: "url_hashes"
       projection: "custom_projection"
@@ -244,7 +244,7 @@ publish:
       resources: ["lib_d3_js", "topojson", "header_css", "content_css", "footer_css", "socialCSS","vizlab-favicon",
                   "map_css", "custom_css", "hashes", "projection", "styles", "buttons", "resize", "map_utils",
                   "map_states", "map_counties", "watermark_utils", "map_circles", "dropdown_selector"]
-      sections: ["social", "mobile_map_ui", "map", "directions_text", "key_stories"] # adding header and footer here, doubled each on the page
+      sections: ["social", "mobile_map_ui", "map", "directions_text", "wu-story"] # adding header and footer here, doubled each on the page
   -
     id: topojson
     location: "js/topojson.v1.min.js"
@@ -337,7 +337,7 @@ publish:
     alttext: "a static story"
     relpath: "images/WU_stories_static.png"
   -
-    id: key_stories
+    id: wu-story
     template: layout/templates/key_stories.mustache
     depends: ["rank_states_utils","wu_state_data_json", "national_pie", "wu_data_15_sum_json", "styles", "static_story_figure"]
     context:
