--- a/preprocess.yaml
+++ b/preprocess.yaml
@@ -59,26 +59,30 @@ targets:
       county_dict_file='cache/pre_county_dictionary.json', script_file='scripts/preprocess/process_counties.sh')
 
   cache/pre_state_boundaries_USA.json:
+    depends: scripts/preprocess/custom_projection.js
     command: process_counties_to_states(
-      outfile=target_name, objects=I('states'), quantize=I(1e6),
+      outfile=target_name, objects=I('states'), quantize=I(1e6), zoom_dims=I(TRUE),
       county_topojson='cache/pre_county_boundaries_USA.json',
       state_dict_file='cache/pre_state_dictionary.json', script_file = 'scripts/preprocess/process_counties_to_states.js') 
   
   cache/pre_all_boundaries_USA.json:
+    depends: scripts/preprocess/custom_projection.js
     command: process_counties_to_states(
-      outfile=target_name, objects=I('states-and-counties'), quantize=I(1e6),
+      outfile=target_name, objects=I('states-and-counties'), quantize=I(1e6), zoom_dims=I(FALSE),
       county_topojson='cache/pre_county_boundaries_USA.json',
       state_dict_file='cache/pre_state_dictionary.json', script_file = 'scripts/preprocess/process_counties_to_states.js') 
       
   cache/pre_state_boundaries_zoom.json:
+    depends: scripts/preprocess/custom_projection.js
     command: process_counties_to_states(
-      outfile=target_name, objects=I('states'), quantize=I(1e8),
+      outfile=target_name, objects=I('states'), quantize=I(1e8), zoom_dims=I(TRUE),
       county_topojson='cache/pre_county_boundaries_zoom.json',
       state_dict_file='cache/pre_state_dictionary.json', script_file = 'scripts/preprocess/process_counties_to_states.js') 
   
   cache/pre_all_boundaries_zoom.json:
+    depends: scripts/preprocess/custom_projection.js
     command: process_counties_to_states(
-      outfile=target_name, objects=I('states-and-counties'), quantize=I(1e8),
+      outfile=target_name, objects=I('states-and-counties'), quantize=I(1e8), zoom_dims=I(FALSE),
       county_topojson='cache/pre_county_boundaries_zoom.json',
       state_dict_file='cache/pre_state_dictionary.json', script_file = 'scripts/preprocess/process_counties_to_states.js') 
   
