--- a/preprocess.yaml
+++ b/preprocess.yaml
@@ -61,7 +61,7 @@ targets:
   cache/pre_state_boundaries_USA.json:
     depends: scripts/preprocess/custom_projection.js
     command: process_counties_to_states(
-      outfile=target_name, objects=I('states'), quantize=I(1e6), zoom_dims=I(TRUE),
+      outfile=target_name, objects=I('states'), quantize=I(1e6), zoom_dims=I(FALSE),
       county_topojson='cache/pre_county_boundaries_USA.json',
       state_dict_file='cache/pre_state_dictionary.json', script_file = 'scripts/preprocess/process_counties_to_states.js') 
   
