yaml strip syntax

--- a/viz.yaml
+++ b/viz.yaml
@@ -347,7 +347,7 @@ publish:
     mimetype: image/jpg
     export: true
     title: "A national map with notes about areas of high water use"
-    alttext: >
+    alttext: >-
       High water use: IL (steel), Northeast (power), AR & CA (irrigation), Gulf Coast (industry), cities (public), ID & AK (other)
     relpath: "images/WU_stories_static.jpg"
   -
@@ -356,7 +356,7 @@ publish:
     mimetype: image/jpg
     export: true
     title: "Map of the western U.S. with notes about areas of high water use"
-    alttext:  >
+    alttext:  >-
       Areas of high water use: Idaho (aquaculture), California (irrigation), Alaska (mining), & big cities (public supply)
     relpath: "images/WU_stories_mobile_left.jpg"
   -
@@ -365,7 +365,7 @@ publish:
     mimetype: image/jpg
     export: true
     title: "Map of the eastern U.S. with notes about areas of high water use"
-    alttext:  >
+    alttext:  >-
       High water use: Illinois (steel production), the Northeast (power generation), Arkansas (irrigation), & Gulf Coast (industry)
     relpath: "images/WU_stories_mobile_right.jpg"
   -
