--- a/preprocess.yaml
+++ b/preprocess.yaml
@@ -51,13 +51,6 @@ targets:
       simplify=I(1e-6), quantize=I(1e6),
       county_dict_file='cache/pre_county_dictionary.json', script_file='scripts/preprocess/process_counties.sh')
   
-  # simplify closer to 1e-20 and quantize closer to 1e20 make higher resolution boundaries (bigger files)  
-  cache/pre_county_boundaries_zoom.json:
-    command: process_counties(
-      outfile=target_name, county_sp=county_boundaries_census_sp,
-      simplify=I(1e-8), quantize=I(1e8),
-      county_dict_file='cache/pre_county_dictionary.json', script_file='scripts/preprocess/process_counties.sh')
-
   cache/pre_state_boundaries_USA.json:
     depends: scripts/preprocess/custom_projection.js
     command: process_counties_to_states(
@@ -72,6 +65,13 @@ targets:
       county_topojson='cache/pre_county_boundaries_USA.json',
       state_dict_file='cache/pre_state_dictionary.json', script_file = 'scripts/preprocess/process_counties_to_states.js') 
       
+  # simplify closer to 1e-20 and quantize closer to 1e20 make higher resolution boundaries (bigger files)  
+  cache/pre_county_boundaries_zoom.json:
+    command: process_counties(
+      outfile=target_name, county_sp=county_boundaries_census_sp,
+      simplify=I(1e-8), quantize=I(1e8),
+      county_dict_file='cache/pre_county_dictionary.json', script_file='scripts/preprocess/process_counties.sh')
+
   cache/pre_state_boundaries_zoom.json:
     depends: scripts/preprocess/custom_projection.js
     command: process_counties_to_states(
@@ -85,6 +85,13 @@ targets:
       outfile=target_name, objects=I('states-and-counties'), quantize=I(1e8), zoom_dims=I(FALSE),
       county_topojson='cache/pre_county_boundaries_zoom.json',
       state_dict_file='cache/pre_state_dictionary.json', script_file = 'scripts/preprocess/process_counties_to_states.js') 
+  
+  # simplify somewhere between USA and zoom top optimize for mobile
+  cache/pre_county_boundaries_mobile.json:
+    command: process_counties(
+      outfile=target_name, county_sp=county_boundaries_census_sp,
+      simplify=I(1e-7), quantize=I(1e7),
+      county_dict_file='cache/pre_county_dictionary.json', script_file='scripts/preprocess/process_counties.sh')
   
   cache/pre_county_centroids_USA.json:
     command: process_compute_centroids(
