--- a/viz.yaml
+++ b/viz.yaml
@@ -112,6 +112,14 @@ fetch:
     remoteItemId: "5ab154b1e4b081f61ab26420"
     remoteFilename: "state_boundaries_zoom.json"
   -
+    id: state_boundaries_mobile_topojson
+    location: cache/state_boundaries_mobile.json
+    reader: json
+    mimetype: application/json
+    fetcher: sciencebase
+    remoteItemId: "5ab154b1e4b081f61ab26420"
+    remoteFilename: "state_boundaries_mobile.json"
+  -
     id: county_boundaries_USA_topojson
     location: cache/county_boundaries_USA.json
     reader: json
@@ -127,6 +135,14 @@ fetch:
     fetcher: sciencebase
     remoteItemId: "5ab154b1e4b081f61ab26420"
     remoteFilename: "county_boundaries_zoom.json"
+  -
+    id: county_boundaries_mobile_topojson
+    location: cache/county_boundaries_mobile.json
+    reader: json
+    mimetype: application/json
+    fetcher: sciencebase
+    remoteItemId: "5ab154b1e4b081f61ab26420"
+    remoteFilename: "county_boundaries_mobile.json"
   -
     id: county_centroids_topojson
     location: cache/county_centroids_USA.json
@@ -232,8 +248,10 @@ publish:
       dropdown_selector: "dropdown_selector"
       state_boundaries_USA: state_boundaries_USA_topojson
       state_boundaries_zoom: state_boundaries_zoom_topojson
+      state_boundaries_mobile: state_boundaries_mobile_topojson
       county_boundaries_USA: county_boundaries_USA_topojson
       county_boundaries_zoom: county_boundaries_zoom_topojson
+      county_boundaries_mobile: county_boundaries_mobile_topojson
       county_centroids_wu: "county_centroids_wu_tsv"
       wu_data_15_range:  "wu_data_15_range_json"
       thumb-facebook: thumb-facebook
@@ -435,8 +453,10 @@ publish:
       map_section: map_section
       state_boundaries_USA: state_boundaries_USA_topojson
       state_boundaries_zoom: state_boundaries_zoom_topojson
+      state_boundaries_mobile: state_boundaries_mobile_topojson
       county_boundaries_USA: county_boundaries_USA_topojson
       county_boundaries_zoom: county_boundaries_zoom_topojson
+      county_boundaries_mobile: county_boundaries_mobile_topojson
       county_centroids_wu: county_centroids_wu_tsv
       wu_data_15_range:  wu_data_15_range_json
     context:
