--- a/preprocess.yaml
+++ b/preprocess.yaml
@@ -60,6 +60,13 @@ targets:
       simplify=I(1e-6), quantize=I(1e6),
       county_dict_file='cache/pre_county_dictionary.json', script_file='scripts/preprocess/process_counties.sh')
 
+  # simplify somewhere between USA and zoom top optimize for mobile
+  cache/simpled_county_boundaries_mobile.json:
+    command: process_counties(
+      outfile=target_name, county_sp=county_boundaries_shifted_sp,
+      simplify=I(1e-7), quantize=I(1e7),
+      county_dict_file='cache/pre_county_dictionary.json', script_file='scripts/preprocess/process_counties.sh')
+
   # simplify closer to 1e-20 and quantize closer to 1e20 make higher resolution boundaries (bigger files)  
   cache/simpled_county_boundaries_zoom.json:
     command: process_counties(
@@ -67,25 +74,19 @@ targets:
       simplify=I(1e-8), quantize=I(1e8),
       county_dict_file='cache/pre_county_dictionary.json', script_file='scripts/preprocess/process_counties.sh')
 
-  # simplify somewhere between USA and zoom top optimize for mobile
-  cache/simpled_county_boundaries_mobile.json:
-    command: process_counties(
-      outfile=target_name, county_sp=county_boundaries_shifted_sp,
-      simplify=I(1e-7), quantize=I(1e7),
-      county_dict_file='cache/pre_county_dictionary.json', script_file='scripts/preprocess/process_counties.sh')
       
 # --- shift back scales after simplication of counties --- #
   target/data/county_boundaries_USA.json:
     command: rescale_write_shps(
-      target_name, "cache/simpled_county_boundaries_USA.json", STATEFP = I(c('72','78')), scale = I(1/3))
-
-  target/data/county_boundaries_zoom.json:
-    command: rescale_write_shps(
-      target_name, "cache/simpled_county_boundaries_zoom.json", STATEFP = I(c('72','78')), scale = I(1/3)) 
+      target_name, "cache/simpled_county_boundaries_USA.json", STATEFP = I(c('72','78')), scale = I(1/3), quantize=I(1e6))
 
   target/data/county_boundaries_mobile.json:
     command: rescale_write_shps(
-      target_name, "cache/simpled_county_boundaries_mobile.json", STATEFP = I(c('72','78')), scale = I(1/3))  
+      target_name, "cache/simpled_county_boundaries_mobile.json", STATEFP = I(c('72','78')), scale = I(1/3), coerce_dropped = I(TRUE), quantize=I(1e7)) 
+
+  target/data/county_boundaries_zoom.json:
+    command: rescale_write_shps(
+      target_name, "cache/simpled_county_boundaries_zoom.json", STATEFP = I(c('72','78')), scale = I(1/3), coerce_dropped = I(TRUE), quantize=I(1e8)) 
 
 # --- use topojson versions of counties to create state boundaries --- #
 
@@ -95,21 +96,20 @@ targets:
       outfile=target_name, objects=I('states'), quantize=I(1e6), zoom_dims=I(FALSE),
       county_topojson='target/data/county_boundaries_USA.json',
       state_dict_file='cache/pre_state_dictionary.json', script_file = 'scripts/preprocess/process_counties_to_states.js') 
-  
+
+  target/data/state_boundaries_mobile.json:
+    depends: scripts/preprocess/custom_projection.js
+    command: process_counties_to_states(
+      outfile=target_name, objects=I('states'), quantize=I(1e7), zoom_dims=I(TRUE),
+      county_topojson='target/data/county_boundaries_mobile.json',
+      state_dict_file='cache/pre_state_dictionary.json', script_file = 'scripts/preprocess/process_counties_to_states.js')   
+
   target/data/state_boundaries_zoom.json:
     depends: scripts/preprocess/custom_projection.js
     command: process_counties_to_states(
       outfile=target_name, objects=I('states'), quantize=I(1e8), zoom_dims=I(TRUE),
       county_topojson='target/data/county_boundaries_zoom.json',
       state_dict_file='cache/pre_state_dictionary.json', script_file = 'scripts/preprocess/process_counties_to_states.js') 
-
-  target/data/state_boundaries_mobile.json:
-    depends: scripts/preprocess/custom_projection.js
-    command: process_counties_to_states(
-      outfile=target_name, objects=I('states'), quantize=I(1e8), zoom_dims=I(TRUE),
-      county_topojson='target/data/county_boundaries_mobile.json',
-      state_dict_file='cache/pre_state_dictionary.json', script_file = 'scripts/preprocess/process_counties_to_states.js') 
-
 
 # --- create county centroids from original sp object --- #
 
