--- a/preprocess.yaml
+++ b/preprocess.yaml
@@ -43,7 +43,7 @@ targets:
     command: read_shp_zip('cache/pre_county_boundaries_census.zip')
     
   county_boundaries_shifted_sp:
-    command: scale_shifted_shps(county_boundaries_census_sp, STATEFP = I(c('72','78')), scale = I(3))
+    command: scale_shifted_shps(county_boundaries_census_sp, STATEFP = I(c('72','78','02')), scale = I(c(3, 3, 1/2)))
     
   cache/pre_county_dictionary.json:
     command: process_county_dictionary(target_name, county_boundaries_shifted_sp)
@@ -64,7 +64,7 @@ targets:
   cache/simpled_county_boundaries_mobile.json:
     command: process_counties(
       outfile=target_name, county_sp=county_boundaries_shifted_sp,
-      simplify=I(1e-7), quantize=I(1e7),
+      simplify=I(5e-7), quantize=I(5e6),
       county_dict_file='cache/pre_county_dictionary.json', script_file='scripts/preprocess/process_counties.sh')
 
   # simplify closer to 1e-20 and quantize closer to 1e20 make higher resolution boundaries (bigger files)  
@@ -76,35 +76,35 @@ targets:
 
       
 # --- shift back scales after simplication of counties --- #
-  target/data/county_boundaries_USA.json:
+  cache/pre_county_boundaries_USA.json:
     command: rescale_write_shps(
-      target_name, "cache/simpled_county_boundaries_USA.json", STATEFP = I(c('72','78')), scale = I(1/3), quantize=I(1e6))
+      target_name, "cache/simpled_county_boundaries_USA.json", STATEFP = I(c('72','78','02')), scale = I(c(1/3, 1/3, 2)), quantize=I(1e6))
 
-  target/data/county_boundaries_mobile.json:
+  cache/pre_county_boundaries_mobile.json:
     command: rescale_write_shps(
-      target_name, "cache/simpled_county_boundaries_mobile.json", STATEFP = I(c('72','78')), scale = I(1/3), coerce_dropped = I(TRUE), quantize=I(1e7)) 
+      target_name, "cache/simpled_county_boundaries_mobile.json", STATEFP = I(c('72','78','02')), scale = I(c(1/3, 1/3, 2)), coerce_dropped = I(TRUE), quantize=I(1e7)) 
 
-  target/data/county_boundaries_zoom.json:
+  cache/pre_county_boundaries_zoom.json:
     command: rescale_write_shps(
-      target_name, "cache/simpled_county_boundaries_zoom.json", STATEFP = I(c('72','78')), scale = I(1/3), coerce_dropped = I(TRUE), quantize=I(1e8)) 
+      target_name, "cache/simpled_county_boundaries_zoom.json", STATEFP = I(c('72','78','02')), scale = I(c(1/3, 1/3, 2)), coerce_dropped = I(TRUE), quantize=I(1e8)) 
 
 # --- use topojson versions of counties to create state boundaries --- #
 
-  target/data/state_boundaries_USA.json:
+  cache/pre_state_boundaries_USA.json:
     depends: scripts/preprocess/custom_projection.js
     command: process_counties_to_states(
       outfile=target_name, objects=I('states'), quantize=I(1e6), zoom_dims=I(FALSE),
       county_topojson='target/data/county_boundaries_USA.json',
       state_dict_file='cache/pre_state_dictionary.json', script_file = 'scripts/preprocess/process_counties_to_states.js') 
 
-  target/data/state_boundaries_mobile.json:
+  cache/pre_state_boundaries_mobile.json:
     depends: scripts/preprocess/custom_projection.js
     command: process_counties_to_states(
-      outfile=target_name, objects=I('states'), quantize=I(1e7), zoom_dims=I(TRUE),
+      outfile=target_name, objects=I('states'), quantize=I(5e6), zoom_dims=I(TRUE),
       county_topojson='target/data/county_boundaries_mobile.json',
       state_dict_file='cache/pre_state_dictionary.json', script_file = 'scripts/preprocess/process_counties_to_states.js')   
 
-  target/data/state_boundaries_zoom.json:
+  cache/pre_state_boundaries_zoom.json:
     depends: scripts/preprocess/custom_projection.js
     command: process_counties_to_states(
       outfile=target_name, objects=I('states'), quantize=I(1e8), zoom_dims=I(TRUE),
@@ -113,42 +113,42 @@ targets:
 
 # --- create county centroids from original sp object --- #
 
-  target/data/county_centroids_USA.json:
+  cache/pre_county_centroids_USA.json:
     command: process_compute_centroids(
-      outfile=target_name, spdat=county_boundaries_shifted_sp,
+      outfile=target_name, spdat=county_boundaries_census_sp,
       county_dict_file='cache/pre_county_dictionary.json')
   
   # --- publish --- #
   
-#  SB_county_boundaries_USA_json:
-#    command: push_SB_object(I("5ab154b1e4b081f61ab26420"), "cache/pre_county_boundaries_USA.json", I("county_boundaries_USA.json"))
-  
-#  SB_county_boundaries_zoom_json:
-#    command: push_SB_object(I("5ab154b1e4b081f61ab26420"), "cache/pre_county_boundaries_zoom.json", I("county_boundaries_zoom.json"))
-  
-#  SB_county_boundaries_mobile_json:
-#    command: push_SB_object(I("5ab154b1e4b081f61ab26420"), "cache/pre_county_boundaries_mobile.json", I("county_boundaries_mobile.json"))
-  
-#  SB_state_boundaries_USA_json:
-#    command: push_SB_object(I("5ab154b1e4b081f61ab26420"), "cache/pre_state_boundaries_USA.json", I("state_boundaries_USA.json"))
-  
-#  SB_state_boundaries_zoom_json:
-#    command: push_SB_object(I("5ab154b1e4b081f61ab26420"), "cache/pre_state_boundaries_zoom.json", I("state_boundaries_zoom.json"))
-  
-#  SB_state_boundaries_mobile_json:
-#    command: push_SB_object(I("5ab154b1e4b081f61ab26420"), "cache/pre_state_boundaries_mobile.json", I("state_boundaries_mobile.json"))
+  SB_county_boundaries_USA_json:
+    command: push_SB_object(I("5ab154b1e4b081f61ab26420"), "cache/pre_county_boundaries_USA.json", I("county_boundaries_USA.json"))
 
-#  SB_county_centroids_json:
-#    command: push_SB_object(I("5ab154b1e4b081f61ab26420"), "cache/pre_county_centroids_USA.json", I("county_centroids_USA.json"))
+  SB_county_boundaries_mobile_json:
+    command: push_SB_object(I("5ab154b1e4b081f61ab26420"), "cache/pre_county_boundaries_mobile.json", I("county_boundaries_mobile.json"))
+    
+  SB_county_boundaries_zoom_json:
+    command: push_SB_object(I("5ab154b1e4b081f61ab26420"), "cache/pre_county_boundaries_zoom.json", I("county_boundaries_zoom.json"))
+
+  SB_state_boundaries_USA_json:
+    command: push_SB_object(I("5ab154b1e4b081f61ab26420"), "cache/pre_state_boundaries_USA.json", I("state_boundaries_USA.json"))
+  
+  SB_state_boundaries_mobile_json:
+    command: push_SB_object(I("5ab154b1e4b081f61ab26420"), "cache/pre_state_boundaries_mobile.json", I("state_boundaries_mobile.json"))
+
+  SB_state_boundaries_zoom_json:
+    command: push_SB_object(I("5ab154b1e4b081f61ab26420"), "cache/pre_state_boundaries_zoom.json", I("state_boundaries_zoom.json"))
+
+  SB_county_centroids_json:
+    command: push_SB_object(I("5ab154b1e4b081f61ab26420"), "cache/pre_county_centroids_USA.json", I("county_centroids_USA.json"))
   
   # --- final --- #
   
   preprocess:
     depends:
-      - target/data/county_boundaries_USA.json
-      - target/data/county_boundaries_zoom.json
-      - target/data/county_boundaries_mobile.json
-      - target/data/state_boundaries_USA.json
-      - target/data/state_boundaries_zoom.json
-      - target/data/state_boundaries_mobile.json
-      - target/data/county_centroids_USA.json
+      - SB_county_boundaries_USA_json
+      - SB_county_boundaries_mobile_json
+      - SB_county_boundaries_zoom_json
+      - SB_state_boundaries_USA_json
+      - SB_state_boundaries_mobile_json
+      - SB_state_boundaries_zoom_json
+      - SB_county_centroids_json
