work in progress

--- a/gif_globals.yml
+++ b/gif_globals.yml
@@ -1,5 +1,6 @@
 packages:
   - gdata
+  - scipiper
 
 sources:
   - scripts/gifs/data_utils.R
@@ -11,3 +12,6 @@ targets:
   
   proj_data:
     command: get_proj_sheet(I("http://stateplane.ret3.net/COUNTYSPC.XLS"))
+    
+  gifs/gd_config.yml:
+    command: gd_config(config_file=target_name, folder=I("18yOyIh7I-H0NQnbq1YeBB_FC9a7Ad6r4"))
