add GA events for scrolling past sections

--- a/viz.yaml
+++ b/viz.yaml
@@ -264,6 +264,7 @@ publish:
       dropdown_selector: "dropdown_selector"
       national_pie: "national_pie"
       rank_states_utils: "rank_states_utils"
+      scroll_tracking: "scroll_tracking"
       state_boundaries_USA: state_boundaries_USA_topojson
       state_boundaries_zoom: state_boundaries_zoom_topojson
       state_boundaries_mobile: state_boundaries_mobile_topojson
@@ -278,7 +279,7 @@ publish:
       resources: ["lib_d3_js", "topojson", "header_css", "content_css", "footer_css", "socialCSS","vizlab-favicon",
                   "map_css", "custom_css", "hashes", "projection", "styles", "buttons", "resize", "map_utils",
                   "map_states", "map_counties", "watermark_utils", "map_circles", "dropdown_selector", "modernizr",
-                  "national_pie", "rank_states_utils"]
+                  "national_pie", "rank_states_utils", "scroll_tracking"]
       sections: ["social", "mobile_map_ui", "map_section", "wu_story"] # adding header and footer here, doubled each on the page
       thumbnails: 
         twitter: thumb-facebook
@@ -348,6 +349,10 @@ publish:
   -
     id: modernizr
     location: "js/modernizr_custom.js"
+    mimetype: application/javascript
+  -
+    id: scroll_tracking
+    location: "js/scroll_tracking.js"
     mimetype: application/javascript
   -
     id: map_css
