--- a/national_gif.yml
+++ b/national_gif.yml
@@ -29,20 +29,22 @@ targets:
   plot_metadata:
     command: c(I(6.5), I(5.2), I(300))
   
-  # proj: "+proj=laea +lat_0=45 +lon_0=-100 +x_0=0 +y_0=0 +a=6370997 +b=6370997 +units=m +no_defs"
+  proj: 
+    command: c(I("+proj=laea +lat_0=45 +lon_0=-100 +x_0=0 +y_0=0 +a=6370997 +b=6370997 +units=m +no_defs"))
+    
   us_states:
-    command: shifted_topojson("cache/state_boundaries_mobile.json")#state_sp()
+    command: shifted_topojson("cache/state_boundaries_mobile.json", proj.string = proj)
     
   us_counties:
-    command: shifted_topojson("cache/county_boundaries_mobile.json")
+    command: shifted_topojson("cache/county_boundaries_mobile.json", proj.string = proj)
     
   county_dots:
-    command: get_national_dots('cache/county_centroids_USA.json', 
-      proj.string = I("+proj=laea +lat_0=45 +lon_0=-100 +x_0=0 +y_0=0 +a=6370997 +b=6370997 +units=m +no_defs"),
-      'cache/county_centroids_wu.tsv', state_totals = state_totals) #???
+    command: get_state_dots('cache/county_centroids_USA.json', 
+      proj.string = proj,
+      'cache/county_centroids_wu.tsv', state_totals = state_totals)
     
   us_county_dots:
-    command: shift_centroids(county_dots)
+    command: shift_centroids(county_dots, proj.string = proj)
 
   state_totals:
     command: get_us_totals('cache/wu_data_15_sum.json')
@@ -53,4 +55,4 @@ targets:
   gifs/US_water_use.gif.ind:
     command: build_wu_gif(us_states, us_counties, us_county_dots, state_totals, plot_layout, 
       'images/usgs_logo_black.png', 
-      target_name, frames = I(2), I('pie'), I('thermoelectric'))#, I('irrigation'), I('publicsupply'))
+      target_name, frames = I(5), I('pie'), I('thermoelectric'), I('irrigation'), I('publicsupply'), pause_delay = I('250'))
