--- a/viz.yaml
+++ b/viz.yaml
@@ -278,12 +278,16 @@ publish:
       thumb_twitter: thumb_twitter
       thumb_landing: thumb_landing
       wu_state_data_json: wu_state_data_json
+      water_use_thumb: "water_use_thumb"
+      hurricane_maria: "hurricane_maria"
     context:
       resources: ["lib_d3_js", "topojson", "header_css", "content_css", "footer_css", "socialCSS","vizlab-favicon",
                   "map_css", "custom_css", "hashes", "projection", "styles", "buttons", "resize", "map_utils",
                   "map_states", "map_counties", "watermark_utils", "map_circles", "mobile_ui", "modernizr",
                   "lazy_loader", "national_pie", "rank_states_utils", "scroll_tracking"]
       sections: ["social", "mobile_map_ui", "map_section", "wu_story"] # adding header and footer here, doubled each on the page
+      water_use_thumb: "water_use_thumb"
+      hurricane_maria: "hurricane_maria"
       thumbnails: 
         twitter: thumb_twitter
         facebook: thumb_facebook
@@ -420,6 +424,20 @@ publish:
     data-src: "images/WU_stories_static.jpg"
     class: "lazy"
   -
+    id: water_use_thumb
+    location: "images/water_use_thumb.png"
+    mimetype: image/png
+    title: "Water Use Thubnail"
+    alttext: "Water Use Thubnail"
+    relpath: "images/water_use_thumb.png"
+  -
+    id: hurricane_maria
+    location: "images/hurricane_marie.png"
+    mimetype: image/png
+    title: "Hurricane Maria Thumbnail"
+    alttext: "Hurricane Maria Thumbnail"
+    relpath: "images/hurricane_marie.png"
+  -
     id: wu_story
     template: layout/templates/wu_story.mustache
     depends: ["styles", "placeholder", "static_story_figure", "static_story_figure_mobile"]
@@ -438,20 +456,11 @@ publish:
       selectArrows: selectArrows
   -
     id: footer_section
-    template: footer-template
-    publisher: footer
-    depends: lib-footer-css
-    github-url: https://github.com/USGS-VIZLAB/water-use-15
-    blogsInFooter: FALSE
-    vizzies:
-      - name: Visualizing water use by region and time
-        org: USGS-VIZLAB
-        repo: water-use
-        alt: Water use viz thumb
-      - name: Visualizing Hurricane Maria
-        org: USGS-VIZLAB
-        repo: hurricane-maria
-        alt: hurricane maria viz thumb
+    template: layout/templates/footer.mustache
+    publisher: section
+    depends: [lib-footer-css, "placeholder"]
+    context:
+      placeholder: placeholder
   -
     id: social_section
     template: vertical-social-media-template
